Update theme to fix annoying spacing problem

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1087,3 +1087,7 @@ h1 svg {
 .certification_logo {
     margin-top: 1rem;
 }
+
+.text-container {
+    margin-top: 1rem;
+}
